# robobreizh_simu_ws

./: .gitignore  .gitmodules  Readme.md  install.sh
devel/: .catkin  setup.sh
devel/include/dialog/: File.h  T2S.h  Wav.h  listen.h  listenRequest.h  listenResponse.h  speak.h  speakRequest.h  speakResponse.h
devel/include/mbot_nlu/: ActionSlot.h  ActionSlotArray.h  Slot.h
devel/include/navigation/: CurrentPos.h
devel/include/rrt_exploration/: PointArray.h
devel/lib/pkgconfig/: aws_robomaker_small_house_world.pc  dialog.pc  gazebo_model_velocity_plugin.pc  mbot_nlu.pc  mbot_nlu_classifiers.pc  mbot_nlu_filter.pc  mbot_nlu_training.pc  navigation.pc  pepper_bringup.pc  pepper_control.pc  pepper_description.pc  pepper_gazebo_plugin.pc  pepper_sensors_py.pc  perception.pc  rrt_exploration.pc  simulation.pc
devel/lib/rrt_exploration/: global_rrt_detector
devel/share/aws_robomaker_small_house_world/cmake/: aws_robomaker_small_house_worldConfig.cmake
devel/share/dialog/cmake/: dialog-msg-paths.cmake  dialogConfig.cmake
devel/share/mbot_nlu/cmake/: mbot_nlu-msg-paths.cmake  mbot_nluConfig.cmake
src/gazebo_environment/gazebo_animatedbox/: CMakeLists.txt  animated_box.cc  model_push.cc
src/gazebo_environment/simulation/: CMakeLists.txt
src/robobreizh_navigation/: README.md
src/robobreizh_navigation/navigation/: mapping.sh
src/robobreizh_perception/: README.md  install.sh  install_nvidia_driver.sh  install_ubuntu16.sh
src/robobreizh_perception/perception/: setup.py
src/robobreizh_perception/src/: cfg.yaml  detect.py  start_server.py  test.py
(+121 files in other folders)
